--- a/frontend/Home.css
+++ b/frontend/Home.css
@@ -31,7 +31,7 @@ body{
 }
 #click-here-button{
   background-color: white;
-  color:white;
+  color:blue;
   font-size: large;
   font-weight:600;
   box-shadow:4px 4px 2px rgba(0,0,0,0.50);
